--- a/viewer/static/viewer/css/main.css
+++ b/viewer/static/viewer/css/main.css
@@ -139,3 +139,9 @@ svg>.temp-circle {
 		padding: 8px 15px; 
 	} 
 }
+
+@media (max-width: 500px) {
+	h1 {
+		font-size: 20px;
+	}
+}
